--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -7,6 +7,12 @@
   height: 40vmin;
 }
 
+body{
+    
+    background: black;
+    
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,9 +28,6 @@
   color: #61dafb;
 }
 
-Navbar{
-    color:black;
-}
 
 @keyframes App-logo-spin {
   from {
